css/site.css
.main {
  padding: 20px 10px;
}

.hack header .header-logo-link > img {
  float: left;
  width: 6rem;
  height: 6rem;
  margin: -.5rem 1rem 0 0;
}

.hack h1 {
  padding-top: 0;
}

.hack h2:before {
  content: '';
}

.example {
  margin-bottom: 20px;
}

.example .btn {
  margin-bottom: 10px;
}

footer.footer {
  border-top: 1px solid #ccc;
  margin-top: 5rem;
  padding: 3rem 0;
}

.grid-example {
  padding: 0 2px;
  background-color: #ccc;
  margin-bottom: 1rem;
}

.grid-example .cell {
  text-align: center;
  border: 1px solid #ccc;
  padding: 4px 2px;
  color: #999;
}

.grid-example .cell .content {
  background-color: #ddd;
}

:not(pre) > code[class*="language-"], pre[class*="language-"] {
  background-color: transparent;
  font-weight: normal;
}

.dark-grey .avatarholder {
  border: 1px solid #282828;
}
.avatarholder {
  width: 6.25rem;
  height: 6.25rem;
  line-height: 5rem;
  font-size: 5rem;
  background-repeat: no-repeat;
  background-size: 4.75rem;
}
.avatarholder.smaller {
  width: 4rem;
  height: 4rem;
  line-height: 4rem;
  font-size: 4rem;
  background-size: 3rem;
}
.scala-avatar {
  background-image: url('../img/scala-logo.svg');
}
.javascript-avatar {
  background-image: url('../img/javascript-logo.svg');
  opacity: .8;
}
.haskell-avatar {
  background-image: url('../img/haskell-logo.svg');
}
.aws-lambda-avatar {
  background-image: url('../img/aws-lambda-logo.svg');
}
.aws-api-gateway-avatar {
  background-image: url('../img/aws-api-gateway-logo.svg');
}

.page-content,
.hack section.page-content {
  margin: 3rem 0;
}
.hack article > section {
  margin-bottom: 2.5rem;
}

.media:not(:last-child) {
  margin-bottom: 2rem;
}

a {
  border: none 0;
}
.media-heading > a {
  color: inherit;
}
article > h1 > small,
.media-heading > small {
  font-weight: normal;
  white-space: nowrap;
}
article > h1 > small > time,
.media-heading > small > time {
  font-style: italic;
}
header .site-motto {
  font-size: .95rem;
  letter-spacing: .1rem;
  text-rendering: optimizeLegibility;
}
footer small {
  color: #666;
}

.hack article > h1 {
  display: inline-block;
  margin-bottom: 1.25rem;
}

.token.operator,
.token.entity,
.token.url,
.language-css .token.string,
.style .token.string {
  background: transparent;
}

img {
  margin: 2rem 0;
  width: 100%;
}

.flip {
  -moz-transform: scaleX(-1);    /* Gecko */
  -o-transform: scaleX(-1);      /* Opera */
  -webkit-transform: scaleX(-1); /* Webkit */
  transform: scaleX(-1);         /* Standard */
  filter: FlipH;                 /* IE 6/7/8 */
}

.opens_in_new_symbol {
  display: inline-block;
  margin-left: .1rem;
  font-size: 1.25rem;
  line-height: 1.25rem;
}

.wip-random-joke > .random-joke {
  letter-spacing: normal;
  color: #999;
  background-color: #181818;
}
.wip-random-joke > .random-joke > .fa {
  padding: 0 0 0 0.5rem;
}

.rounded-corners-just-a-bit {
  -webkit-border-radius: .25rem;
  -moz-border-radius: .25rem;
  border-radius: .25rem;
}

.btn {
  padding: .5rem 1rem;
}
.btn > .fa.left {
  margin-right: .5rem;
}
.fa.large {
  font-size: 1.25rem;
}

